# CreditWise

./: .app_pids.txt  .env  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  _db_inspect.py  _fix_tailwind.sh  build_cython.py  cleanup_cache.py  conftest.py  deepanalyze.py  init_env.ps1  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  setup.py  start_dev.ps1  stop.ps1  tmp_old_main.py
API/: AI_analysis_prompts.py  README_ZH.md  __init__.py  admin_api.py  api_logger.py  auth_middleware.py  channel_client.py  chat_api.py  config.py  cors_middleware.py  deploy_guard.py  error_handler.py  execute_api.py  export_api.py  file_api.py  llm_client_manager.py  main.py  model_capabilities.py  models.py  scorecard_api.py  sop_api.py  start_server.py  user_admin_api.py  utils.py  workspace_api.py
config/: users.yaml.example
deepanalyze/: __init__.py
demo/: backend.py
docker/: .dockerignore  Dockerfile  Dockerfile.compiled  README.md  docker-compose.compiled.yml  docker-compose.yml
docs/: DeepAnalyze_upgrade_design.md  GYJZ_FreeTrail_deployment.md  LLM_Manager_guide.md  LLM_Optimization_design.md  code-protection-audit.md  code-protection-plan.md  code_quality_assessment_2026-06-13.md  code_quality_audit_review_2026-06-15.md  cvm_deployment_test_plan.md  deployment_guide.md  document_audit_report_2026-06-12.md  dual_platform_git_guide.md  intranet_deployment_guide.md  llm_manager_fix_postmortem.md  multimodal_chat_plan.md  online_multiuser_deployment_assessment.md  project_development_review.md  project_feature_highlights.md  project_status_summary.md  release_readiness_plan.md  resume_test_guide.md  right_panel_unified_architecture_plan.md  sensitive_account_manual_test_guide.md  sensitive_field_detection_plan.md  system_prompt_guide.md  system_prompt_restructuring_plan.md  test_strategy_resume_functionality.md  user_management_module_design.md  user_manual.md  规则指标体系与策略应用指南.md  规则重叠与策略编排指南.md
example/: README.md
llm_manager_integrated/: __init__.py  __version__.py
scripts/: build_protected.sh  build_tailwind.sh  bump_version.py  deploy_linux.sh  deploy_manual.ps1  deploy_manual.sh  deploy_offline.sh  final_endpoint_test.ps1  hash_password.py  helper-functions.ps1  init_admin.py  migrate_user_isolation.py  migrate_users_yaml_to_db.py  mingw_env_setup.ps1  prepare_offline.sh  service.sh  setup_protected.sh  start.ps1  start_prod.ps1  stop_prod.ps1  sync_model_configs.sh
tests/: test_ai_suggest_retry.py  test_amount_analysis.py  test_amount_analysis_integration.py  test_auth_middleware.py  test_b_model_1_fix.py  test_b_stats_1_fix.py  test_frontend_api_integration.py  test_imbalance_strategy.py  (+16 more)
(+247 files in other folders)
